Fix overlap of menu by point bank on mobile

--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -16,7 +16,7 @@
 @import "../../styles/variables";
 
 .sidebar {
-  z-index: 1000;
+  z-index: 1030;
   overflow-x: hidden;
   overflow-y: auto;
   font-size: 25px;
